remediation/network-ec2-vpc/fix-prowler_ec2_networkacl_allow_ingress_tcp_port_22_arn_aws_ec2_sa_east_1_132410971304_network_acl_acl_074c16100af0e8622_sa_east_1.tf
resource "aws_network_acl_rule" "fix_network_acl_ingress_deny_103095d9a2" {
  network_acl_id = "acl-074c16100af0e8622"
  egress         = false
  rule_number    = 251
  protocol       = "6"
  rule_action    = "deny"
  cidr_block     = "0.0.0.0/0"
  from_port      = 22
  to_port        = 22
  lifecycle {
    ignore_changes = [icmp_type, icmp_code]
  }
}
